# hsynth

./: .gitignore  graph_data.py  hsynth.cabal  lint.sh
app/: Main.hs  UI.hs  UI.hs.old
app/Sound/: Backend.hs  Notes.hs
app/Sound/Backend/: DSP.hs  Environment.hs  OpenAL.hs  State.hs  Util.hs
src/Sound/: Notes.hs
src/Sound/Backend/: DSP.hs  Environment.hs  Events.hs  State.hs  Util.hs  WaveFunction.hs
test/Sound/: NotesSpec.hs
test/Sound/Backend/: DSPSpec.hs  StateSpec.hs  UtilSpec.hs  WaveFunctionSpec.hs
