cabal-version:  2.4
name:           hsynth
version:        0.1.0.0
synopsis:       A basic synthesizer
description:    A basic synthesizer that runs in the terminal using OpenAL
license:        GPL-3.0-or-later
author:         bumbledbees
maintainer:     sam@bombus.cloud

executable hsynth
    main-is:          Main.hs
    hs-source-dirs:   app

    other-modules:    Sound.Backend,
                      Sound.Backend.DSP,
                      Sound.Backend.Environment,
                      Sound.Backend.Events,
                      Sound.Backend.OpenAL,
                      Sound.Backend.State,
                      Sound.Backend.Util,
                      Sound.Notes,
                      UI
                      
    default-language: Haskell2010
    build-depends:    base ^>=4.16.4.0,
                      bytestring >= 0.11.4.0,
                      containers >= 0.5,
                      time >= 1.12.2,
                      mtl >= 2.2.2.0,
                      stm >= 2.5.3.0,

                      -- TUI
                      vty >= 6.2,
                      vty-crossplatform,

                      -- Sound
                      OpenAL >= 1.7.0.5,
    extensions:       NamedFieldPuns,
                      NumericUnderscores
    ghc-options:      -Wall -threaded -O2
