cabal-version:  2.4
name:           hsynth
version:        0.1.0.0
synopsis:       A basic synthesizer
description:    A basic synthesizer that runs in the terminal using OpenAL
license:        GPL-3.0-or-later
author:         bumbledbees
maintainer:     sam@bombus.cloud

common dependencies
    build-depends:      base ^>= 4.16.4.0,
                        containers >= 0.5,
                        mtl >= 2.2.2.0,
                        stm >= 2.5.3.0,
                        time >= 1.12.2,

                        -- TUI
                        vty >= 6.2,
                        vty-crossplatform,

                        -- Sound
                        OpenAL >= 1.7.0.5
    default-extensions: BlockArguments,
                        NamedFieldPuns,
                        NumericUnderscores
    default-language:   Haskell2010

library libhsynth
    import:             dependencies

    hs-source-dirs:     src
    exposed-modules:    Sound.Backend.DSP,
                        Sound.Backend.Environment,
                        Sound.Backend.Events,
                        Sound.Backend.State,
                        Sound.Backend.Util,
                        Sound.Backend.WaveFunction,
                        Sound.Notes
    ghc-options:        -Wall -O2

executable hsynth
    import:             dependencies

    hs-source-dirs:     app
    main-is:            Main.hs
    other-modules:      Sound.Backend,
                        Sound.Backend.OpenAL,
                        UI
    build-depends:      libhsynth
    ghc-options:        -Wall -threaded -O2

test-suite spec
    import:             dependencies
    type:               exitcode-stdio-1.0

    hs-source-dirs:     test
    main-is:            Spec.hs
    other-modules:      Sound.NotesSpec,
                        Sound.Backend.DSPSpec,
                        Sound.Backend.StateSpec,
                        Sound.Backend.UtilSpec,
                        Sound.Backend.WaveFunctionSpec
    build-depends:      hspec >= 2.11.7,
                        libhsynth
    build-tool-depends: hspec-discover:hspec-discover >= 2.11.7
    ghc-options:        -Wall -O2
